card rename fine, but the form-card is too big, css will need to be fixed

--- a/static/css/dark_design.css
+++ b/static/css/dark_design.css
@@ -164,5 +164,9 @@ form {
 .board-form{
     margin-top: 13px;
 }
+.card-form .new-name {
+    max-width:100px;
+}
+
 
 
