--- a/static/css/light_design.css
+++ b/static/css/light_design.css
@@ -167,3 +167,6 @@ form {
 .board-form{
     margin-top: 13px;
 }
+.card-form .new-name {
+    max-width:100px;
+}
